Update Dictionary.java